[package]
name = "BooopServer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = "0.17"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tokio-stream = "0.1"
futures-util = "0.3"
pretty_env_logger = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"